--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Leagues/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Leagues/Create.razor
@@ -47,10 +47,7 @@
                 <small class="form-text text-white-50">Leave blank to create a public league.</small>
             </div>
 
-            <div class="d-flex justify-content-between mt-4">
-                <button type="button" class="btn pink-button" @onclick='() => NavigationManager.NavigateTo("/admin/leagues")'>Cancel</button>
-                <button type="submit" class="btn green-button" disabled="@_isBusy">Create League</button>
-            </div>
+            <BackAndSaveButtons BackText="Back to Leagues" OnBackClick="Back" BusyText="Creating League..." IsBusy="_isBusy"></BackAndSaveButtons>
         </EditForm>
     </div>
 </div>
@@ -83,4 +80,6 @@
 
         _isBusy = false;
     }
+
+    private void Back() => NavigationManager.NavigateTo("/admin/leagues");
 }
