--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
@@ -44,25 +44,8 @@
                 <InputDate id="endDate" class="form-control" @bind-Value="_model.EndDate" />
                 <ValidationMessage For="@(() => _model.EndDate)" />
             </div>
-
-            <div class="d-flex justify-content-between mt-4">
-                <button type="button" class="btn pink-button d-flex align-items-center" @onclick="Back">
-                    <span class="bi bi-arrow-left-circle-fill me-2"></span>Back to Seasons
-                </button>
-
-                <button type="submit" class="btn green-button d-flex align-items-center" disabled="@_isBusy">
-                    @if (_isBusy)
-                    {
-                        <span class="spinner-border spinner-border-sm"></span>
-                        <span> Creating Season...</span>
-                    }
-                    else
-                    {
-                        <span class="bi bi-check-circle-fill me-2"></span>
-                        <span>Save</span>
-                    }
-                </button>
-            </div>
+            
+            <BackAndSaveButtons BackText="Back to Seasons" OnBackClick="Back" BusyText="Creating Season..." IsBusy="_isBusy"></BackAndSaveButtons>
         </EditForm>
     </div>
 </div>
