--- a/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using PredictionLeague.Web.Client
 @using PredictionLeague.Web.Client.Authentication
 @using PredictionLeague.Shared.Auth
+@using PredictionLeague.Web.Client.Components.Shared
