--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
@@ -79,20 +79,7 @@
                     }
                 </div>
 
-                <div class="d-flex justify-content-between mt-4">
-                    <button type="button" class="btn pink-button" @onclick="BackToRounds">Cancel</button>
-                    <button type="submit" class="btn green-button" disabled="@_isBusy">
-                        @if (_isBusy)
-                        {
-                            <span class="spinner-border spinner-border-sm"></span>
-                            <span> Saving...</span>
-                        }
-                        else
-                        {
-                            <span>Save Results & Calculate Points</span>
-                        }
-                    </button>
-                </div>
+                <BackAndSaveButtons BackText="Back to Rounds" OnBackClick="Back" BusyText="Saving..." IsBusy="_isBusy"></BackAndSaveButtons>
             </EditForm>
         }
     </div>
@@ -190,7 +177,7 @@
         _isBusy = false;
     }
 
-    private void BackToRounds()
+    private void Back()
     {
         NavigationManager.NavigateTo($"/admin/seasons/{_seasonId}/rounds");
     }
