--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/List.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/List.razor
@@ -30,7 +30,7 @@
                     <tr>
                         <th>Round Number</th>
                         <th>Start Date</th>
-                        <th>Prediction Deadline</th>
+                        <th>Deadline</th>
                         <th>Matches</th>
                         <th></th>
                     </tr>
@@ -41,12 +41,11 @@
                         <tr>
                             <td data-label="Round Number" class="season-name-cell">Round @round.RoundNumber</td>
                             <td data-label="Start Date">@round.StartDate.ToShortDateString()</td>
-                            <td data-label="Prediction Deadline">@round.Deadline.ToString("g")</td>
+                            <td data-label="Deadline">@round.Deadline.ToString("g")</td>
                             <td data-label="Matches">@round.MatchCount</td>
                             <td data-label="Actions" class="actions-cell">
                                 <button class="btn btn-sm green-button" @onclick="() => EditRound(round.Id)">Edit</button>
-                                <button class="btn btn-sm light-cyan-button me-2" @onclick="() => EnterResults(round.Id)">Enter Results</button>
-
+                                <button class="btn btn-sm light-cyan-button mt-4" @onclick="() => EnterResults(round.Id)">Enter Results</button>
                             </td>
                         </tr>
                     }
