--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Edit.razor
@@ -64,25 +64,8 @@
                     <InputCheckbox id="isActive" class="form-check-input" @bind-Value="_model.IsActive" />
                     <label for="isActive" class="form-check-label text-white">Active</label>
                 </div>
-
-                <div class="d-flex justify-content-between mt-4">
-                    <button type="button" class="btn pink-button d-flex align-items-center" @onclick="Back">
-                        <span class="bi bi-arrow-left-circle-fill me-2"></span>Back to Seasons
-                    </button>
-                    
-                    <button type="submit" class="btn green-button d-flex align-items-center" disabled="@_isBusy">
-                        @if (_isBusy)
-                        {
-                            <span class="spinner-border spinner-border-sm"></span>
-                            <span>Saving...</span>
-                        }
-                        else
-                        {
-                            <span class="bi bi-check-circle-fill me-2"></span>
-                            <span>Save</span>
-                        }
-                    </button>
-                </div>
+                
+                <BackAndSaveButtons BackText="Back to Seasons" OnBackClick="Back" BusyText="Saving..." IsBusy="_isBusy"></BackAndSaveButtons>
             </EditForm>
         }
     </div>
