--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Create.razor
@@ -31,25 +31,8 @@
                 <InputText id="logoUrl" class="form-control" @bind-Value="_model.LogoUrl" />
                 <ValidationMessage For="@(() => _model.LogoUrl)" />
             </div>
-
-            <div class="d-flex justify-content-between mt-4">
-                <button type="button" class="btn pink-button d-flex align-items-center" @onclick="Back">
-                    <span class="bi bi-arrow-left-circle-fill me-2"></span>Back to Teams
-                </button>
-
-                <button type="submit" class="btn green-button d-flex align-items-center" disabled="@_isBusy">
-                    @if (_isBusy)
-                    {
-                        <span class="spinner-border spinner-border-sm"></span>
-                        <span> Creating Team...</span>
-                    }
-                    else
-                    {
-                        <span class="bi bi-check-circle-fill me-2"></span>
-                        <span>Save</span>
-                    }
-                </button>
-            </div>
+            
+            <BackAndSaveButtons BackText="Back to Teams" OnBackClick="Back" BusyText="Creating Team..." IsBusy="_isBusy"></BackAndSaveButtons>
         </EditForm>
     </div>
 </div>
@@ -73,8 +56,5 @@
         _isBusy = false;
     }
 
-    private void Back()
-    {
-        NavigationManager.NavigateTo("/admin/teams");
-    }
+    private void Back() => NavigationManager.NavigateTo("/admin/teams");
 }
