--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
@@ -42,26 +42,8 @@
                     <InputText id="logoUrl" class="form-control" @bind-Value="_model.LogoUrl" />
                     <ValidationMessage For="@(() => _model.LogoUrl)" />
                 </div>
-
-                <div class="d-flex justify-content-between mt-4">
-                    <button type="button" class="btn pink-button d-flex align-items-center" @onclick="Back">
-                        <span class="bi bi-arrow-left-circle-fill me-2"></span>Back to Teams
-                    </button>
-                    
-                    
-                    <button type="submit" class="btn green-button d-flex align-items-center" disabled="@_isBusy">
-                        @if (_isBusy)
-                        {
-                            <span class="spinner-border spinner-border-sm"></span>
-                            <span> Saving...</span>
-                        }
-                        else
-                        {
-                            <span class="bi bi-check-circle-fill me-2"></span>
-                            <span>Save</span>
-                        }
-                    </button>
-                </div>
+                
+                <BackAndSaveButtons BackText="Back to Teams" OnBackClick="Back" BusyText="Saving..." IsBusy="_isBusy"></BackAndSaveButtons>
             </EditForm>
         }
     </div>
@@ -100,8 +82,5 @@
         _isBusy = false;
     }
 
-    private void Back()
-    {
-        NavigationManager.NavigateTo("/admin/teams");
-    }
+    private void Back() => NavigationManager.NavigateTo("/admin/teams");
 }
