Refactor Admin Service

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
@@ -156,7 +156,7 @@
         _successMessage = null;
 
         var resultsToUpdate = _matches!
-            .Select(m => new UpdateResultRequest
+            .Select(m => new UpdateMatchResultsRequest
             {
                 MatchId = m.Id,
                 HomeScore = m.ActualHomeScore ?? 0,
