--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Shared/BackAndSaveButtons.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Shared/BackAndSaveButtons.razor
@@ -5,19 +5,22 @@
             <span class="bi bi-arrow-left-circle-fill me-2"></span> @BackText
         </button>
     }
-
-    <button type="submit" class="btn green-button d-flex align-items-center" disabled="@IsBusy">
-        @if (IsBusy)
-        {
-            <span class="spinner-border spinner-border-sm"></span>
-            <span> @BusyText</span>
-        }
-        else
-        {
-            <span class="bi bi-check-circle-fill me-2"></span>
-            <span>@SubmitText</span>
-        }
-    </button>
+    
+    @if (SaveVisible)
+    {  
+        <button type="submit" class="btn green-button d-flex align-items-center" disabled="@IsBusy">
+            @if (IsBusy)
+            {
+                <span class="spinner-border spinner-border-sm"></span>
+                <span> @BusyText</span>
+            }
+            else
+            {
+                <span class="bi bi-check-circle-fill me-2"></span>
+                <span>@SubmitText</span>
+            }
+        </button>
+    }
 </div>
 
 @code {
@@ -29,6 +32,9 @@
 
     [Parameter]
     public bool BackVisible { get; set; } = true;
+
+    [Parameter]
+    public bool SaveVisible { get; set; } = true;
 
     [Parameter]
     public string? SubmitText { get; set; } = "Save";
