--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Auth/Login.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Auth/Login.razor
@@ -28,13 +28,22 @@
 
             <div class="mb-3">
                 <label for="email" class="form-label text-white">Email address</label>
-                <InputText id="email" class="form-control" @bind-Value="_model.Email" />
+                <InputText id="email" 
+                           class="form-control" 
+                           @bind-Value="_model.Email" 
+                           data-lpignore="true" 
+                           autocomplete="off" />
                 <ValidationMessage For="@(() => _model.Email)" />
             </div>
 
             <div class="mb-3">
                 <label for="password" class="form-label text-white">Password</label>
-                <InputText id="password" type="password" class="form-control" @bind-Value="_model.Password" />
+                <InputText id="password" 
+                           type="password" 
+                           class="form-control" 
+                           @bind-Value="_model.Password" 
+                           data-lpignore="true" 
+                           autocomplete="new-password" />
                 <ValidationMessage For="@(() => _model.Password)" />
             </div>
 
