--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/forms.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/forms.css
@@ -16,7 +16,21 @@
 
 .validation-message {
     color: var(--pl-pink);
+    font-size: 0.875em;
+    font-weight: 500;
+    display: block;
+    margin-top: 0.25rem;
+    padding: 0.25rem 0.5rem;
+    background-color: rgba(233, 0, 82, 0.1);
+    border-radius: 4px;
+    border: 1px solid rgba(233, 0, 82, 0.2);
 }
+
+    .validation-message::before {
+        font-family: 'bootstrap-icons';
+        content: "\f335";
+        margin-right: 0.5em;
+    }
 
 .match-logo {
     height: 25px;
