Create Validation Project

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
@@ -1,12 +1,13 @@
-﻿@using System.Net.Http
-@using System.Net.Http.Json
+﻿@using Blazored.FluentValidation
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+@using PredictionLeague.Shared.Auth
 @using PredictionLeague.Web.Client
 @using PredictionLeague.Web.Client.Authentication
-@using PredictionLeague.Shared.Auth
 @using PredictionLeague.Web.Client.Components.Shared
+@using System.Net.Http
+@using System.Net.Http.Json
