--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Create.razor
@@ -14,11 +14,7 @@
         <h3 class="text-center fw-bold text-white mb-4">Create New Team</h3>
         <EditForm Model="_model" OnValidSubmit="HandleCreateTeam">
             <FluentValidationValidator />
-
-            @if (!string.IsNullOrEmpty(_errorMessage))
-            {
-                <div class="alert alert-danger" role="alert">@_errorMessage</div>
-            }
+            <ApiError Message="@_errorMessage" />
 
             <div class="mb-3">
                 <label for="name" class="form-label text-white">Team Name</label>
