--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/Predictions.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/Predictions.razor
@@ -24,14 +24,8 @@
 
             <EditForm Model="_model" OnValidSubmit="HandleSubmitPredictions">
                 <FluentValidationValidator />
-                @if (!string.IsNullOrEmpty(_errorMessage))
-                {
-                    <div class="alert alert-danger">@_errorMessage</div>
-                }
-                @if (!string.IsNullOrEmpty(_successMessage))
-                {
-                    <div class="alert alert-success">@_successMessage</div>
-                }
+                <ApiError Message="@_errorMessage" />
+                <ApiSuccess Message="@_successMessage" />
 
                 <div class="prediction-grid">
                     @foreach (var match in _pageData.Matches)
