--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Leagues/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Leagues/Create.razor
@@ -15,15 +15,8 @@
         <h3 class="text-center fw-bold text-white mb-4">Create New League</h3>
         <EditForm Model="_model" OnValidSubmit="HandleCreateLeague">
             <FluentValidationValidator />
-            @if (!string.IsNullOrEmpty(_errorMessage))
-            {
-                <div class="alert alert-danger">@_errorMessage</div>
-            }
-
-            @if (!string.IsNullOrEmpty(_successMessage))
-            {
-                <div class="alert alert-success">@_successMessage</div>
-            }
+            <ApiError Message="@_errorMessage" />
+            <ApiSuccess Message="@_successMessage" />
 
             <div class="mb-3">
                 <label for="season" class="form-label text-white">Season</label>
