--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/Edit.razor
@@ -22,15 +22,8 @@
         {
             <EditForm Model="_model" OnValidSubmit="HandleUpdateRound">
                 <FluentValidationValidator />
-                @if (!string.IsNullOrEmpty(_errorMessage))
-                {
-                    <div class="alert alert-danger">@_errorMessage</div>
-                }
-
-                @if (!string.IsNullOrEmpty(_successMessage))
-                {
-                    <div class="alert alert-success">@_successMessage</div>
-                }
+                <ApiError Message="@_errorMessage" />
+                <ApiSuccess Message="@_successMessage" />
 
                 <div class="row">
                     <div class="col-md-4 mb-3">
