--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
@@ -17,15 +17,8 @@
 
         <EditForm Model="_model" OnValidSubmit="HandleCreateSeason">
             <FluentValidationValidator />
-
-            @if (!string.IsNullOrEmpty(_errorMessage))
-            {
-                <div class="alert alert-danger" role="alert">@_errorMessage</div>
-            }
-            @if (!string.IsNullOrEmpty(_successMessage))
-            {
-                <div class="alert alert-success" role="alert">@_successMessage</div>
-            }
+            <ApiError Message="@_errorMessage" />
+            <ApiSuccess Message="@_successMessage" />
 
             <div class="mb-3">
                 <label for="name" class="form-label text-white">Season Name</label>
