--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
@@ -21,15 +21,8 @@
         {
             <EditForm Model="_model" OnValidSubmit="HandleUpdateTeam">
                 <FluentValidationValidator />
-                @if (!string.IsNullOrEmpty(_errorMessage))
-                {
-                    <div class="alert alert-danger" role="alert">@_errorMessage</div>
-                }
-
-                @if (!string.IsNullOrEmpty(_successMessage))
-                {
-                    <div class="alert alert-success" role="alert">@_successMessage</div>
-                }
+                <ApiError Message="@_errorMessage" />
+                <ApiSuccess Message="@_successMessage" />
 
                 <div class="mb-3">
                     <label for="name" class="form-label text-white">Team Name</label>
