--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Auth/Register.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Auth/Register.razor
@@ -16,15 +16,8 @@
 
         <EditForm Model="_model" OnValidSubmit="HandleRegistration" FormName="registerForm">
             <FluentValidationValidator />
-
-            @if (!string.IsNullOrEmpty(_errorMessage))
-            {
-                <div class="alert alert-danger" role="alert">@_errorMessage</div>
-            }
-            @if (!string.IsNullOrEmpty(_successMessage))
-            {
-                <div class="alert alert-success">@_successMessage</div>
-            }
+            <ApiError Message="@_errorMessage" />
+            <ApiSuccess Message="@_successMessage" />
 
             <div class="mb-3">
                 <label for="firstName" class="form-label text-white">First Name</label>
