--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/buttons.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/buttons.css
@@ -67,7 +67,7 @@
     justify-content: center;
     padding: 0.75rem;
     font-weight: 500;
-    border-radius: 4px;
+    border-radius: var(--bs-border-radius);
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
