--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/cards.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/cards.css
@@ -6,7 +6,7 @@
 
 .team-card {
     background-color: var(--pl-light-purple);
-    border-radius: 8px;
+    border-radius: var(--bs-border-radius);
     overflow: hidden;
     text-align: center;
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
@@ -52,7 +52,7 @@
 
 .match-card {
     border: 1px solid var(--pl-purple-dark);
-    border-radius: 8px;
+    border-radius: var(--bs-border-radius);
     background-color: var(--pl-purple);
 }
 
