--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/dashboard.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/dashboard.css
@@ -8,7 +8,7 @@
 .dashboard-card {
     background-color: var(--pl-light-purple);
     padding: 2rem;
-    border-radius: 8px;
+    border-radius: var(--bs-border-radius);
     color: white;
     display: flex;
     flex-direction: column;
@@ -43,7 +43,7 @@
 
 .round-card {
     background-color: var(--pl-purple);
-    border-radius: 8px;
+    border-radius: var(--bs-border-radius);
     overflow: hidden;
     color: white;
     display: flex;
@@ -84,7 +84,7 @@
     border-color: var(--pl-purple-dark);
     color: white;
     margin-bottom: 0.5rem;
-    border-radius: 4px;
+    border-radius: var(--bs-border-radius);
 }
 
     .joinable-league-item:hover {
