--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/forms.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/forms.css
@@ -1,35 +1,17 @@
 ﻿.form-container {
     background-color: var(--pl-light-purple);
     padding: 2.5rem;
-    border-radius: 8px;
+    border-radius: var(--bs-border-radius);
     width: 100%;
     max-width: 600px;
 }
 
     .form-container.wide {
-        max-width: 900px; 
-    } 
-    
-    .form-container.extra-wide {
-        max-width: 1200px; 
+        max-width: 900px;
     }
 
-.validation-message {
-    color: var(--pl-pink);
-    font-size: 0.875em;
-    font-weight: 500;
-    display: block;
-    margin-top: 0.25rem;
-    padding: 0.25rem 0.5rem;
-    background-color: rgba(233, 0, 82, 0.1);
-    border-radius: 4px;
-    border: 1px solid rgba(233, 0, 82, 0.2);
-}
-
-    .validation-message::before {
-        font-family: 'bootstrap-icons';
-        content: "\f335";
-        margin-right: 0.5em;
+    .form-container.extra-wide {
+        max-width: 1200px;
     }
 
 .match-logo {
@@ -49,4 +31,56 @@
 
     .logo-wrapper.visible {
         background-color: white;
+    }
+
+
+/* Validation */
+
+.validation-message {
+    color: var(--pl-pink);
+    font-size: 0.875em;
+    font-weight: 500;
+    display: block;
+    margin-top: 0.5rem;
+    padding: 0.25rem 0.5rem;
+    background-color: rgba(233, 0, 82, 0.1);
+    border-radius: var(--bs-border-radius);
+    border: 1px solid rgba(233, 0, 82, 0.2);
+}
+
+    .validation-message::before {
+        font-family: 'bootstrap-icons';
+        content: "\f335";
+        margin-right: 0.5em;
+    }
+
+.api-error-summary {
+    color: var(--pl-alert-error-text);
+    background-color: var(--pl-alert-error-bg);
+    border: 1px solid var(--pl-alert-error-border);
+    padding: 1rem;
+    border-radius: var(--bs-border-radius);
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+    .api-error-summary .bi {
+        color: var(--pl-pink);
+    }
+
+.api-success-summary {
+    color: var(--pl-alert-success-text);
+    background-color: var(--pl-alert-success-bg);
+    border: 1px solid var(--pl-alert-success-border);
+    padding: 1rem;
+    border-radius: var(--bs-border-radius);
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+    .api-success-summary .bi {
+        color: var(--pl-green);
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     }
