--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
@@ -23,19 +23,19 @@
             <div class="mb-3">
                 <label for="name" class="form-label text-white">Season Name</label>
                 <InputText id="name" class="form-control" @bind-Value="_model.Name" placeholder="e.g., 2024/2025" />
-                <ValidationMessage For="@(() => _model.Name)" />
+                <StyledValidationMessage For="@(() => _model.Name)" />
             </div>
 
             <div class="mb-3">
                 <label for="startDate" class="form-label text-white">Start Date</label>
                 <InputDate id="startDate" class="form-control" @bind-Value="_model.StartDate" />
-                <ValidationMessage For="@(() => _model.StartDate)" />
+                <StyledValidationMessage For="@(() => _model.StartDate)" />
             </div>
 
             <div class="mb-3">
                 <label for="endDate" class="form-label text-white">End Date</label>
                 <InputDate id="endDate" class="form-control" @bind-Value="_model.EndDate" />
-                <ValidationMessage For="@(() => _model.EndDate)" />
+                <StyledValidationMessage For="@(() => _model.EndDate)" />
             </div>
             
             <BackAndSaveButtons BackText="Back to Seasons" OnBackClick="Back" BusyText="Creating Season..." IsBusy="_isBusy"></BackAndSaveButtons>
