--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Auth/Register.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Auth/Register.razor
@@ -24,26 +24,36 @@
 
             <div class="mb-3">
                 <label for="firstName" class="form-label text-white">First Name</label>
-                <InputText id="firstName" class="form-control" @bind-Value="_model.FirstName" />
-                <ValidationMessage For="@(() => _model.FirstName)" />
+                <InputText id="firstName" class="form-control" data-lpignore="true" autocomplete="off" @bind-Value="_model.FirstName" />
+                <StyledValidationMessage For="@(() => _model.FirstName)" />
             </div>
 
             <div class="mb-3">
                 <label for="lastName" class="form-label text-white">Last Name</label>
-                <InputText id="lastName" class="form-control" @bind-Value="_model.LastName" />
-                <ValidationMessage For="@(() => _model.LastName)" />
+                <InputText id="lastName" class="form-control" data-lpignore="true" autocomplete="off" @bind-Value="_model.LastName" />
+                <StyledValidationMessage For="@(() => _model.LastName)" />
             </div>
 
             <div class="mb-3">
                 <label for="email" class="form-label text-white">Email address</label>
-                <InputText id="email" class="form-control" @bind-Value="_model.Email" />
-                <ValidationMessage For="@(() => _model.Email)" />
+                <InputText id="email" class="form-control" data-lpignore="true" autocomplete="off" @bind-Value="_model.Email" />
+                <StyledValidationMessage For="@(() => _model.Email)" />
             </div>
 
             <div class="mb-3">
                 <label for="password" class="form-label text-white">Password</label>
-                <InputText id="password" type="password" class="form-control" @bind-Value="_model.Password" />
-                <ValidationMessage For="@(() => _model.Password)" />
+                <div class="input-group">
+                    <InputText id="password"
+                               type="@(_showPassword ? "text" : "password")"
+                               class="form-control"
+                               @bind-Value="_model.Password"
+                               data-lpignore="true"
+                               autocomplete="new-password" />
+                    <button type="button" class="btn password-toggle-btn" @onclick="TogglePasswordVisibility">
+                        <i class="bi @(_showPassword ? "bi-eye-slash-fill" : "bi-eye-fill")"></i>
+                    </button>
+                </div>
+                <StyledValidationMessage For="@(() => _model.Password)" />
             </div>
 
             <div class="d-grid">
@@ -88,6 +98,7 @@
     private string? _errorMessage;
     private string? _successMessage;
     private bool _isBusy;
+    private bool _showPassword;
 
     protected override void OnInitialized()
     {
@@ -96,6 +107,11 @@
         {
             _errorMessage = errorValue;
         }
+    }
+
+    private void TogglePasswordVisibility()
+    {
+        _showPassword = !_showPassword;
     }
 
     private async Task HandleRegistration()
