--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard.razor
@@ -3,7 +3,7 @@
 @attribute [Authorize]
 
 @inject HttpClient Http
-@inject IAuthService AuthService
+@inject IAuthenticationService AuthenticationService
 
 <PageTitle>Dashboard</PageTitle>
 
@@ -160,7 +160,7 @@
 
     private async Task JoinLeague(int leagueId)
     {
-        var result = await AuthService.JoinPublicLeagueAsync(leagueId);
+        var result = await AuthenticationService.JoinPublicLeagueAsync(leagueId);
         if (result)
         {
             _isLoading = true;
