--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Shared/RedirectToLogin.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Shared/RedirectToLogin.razor
@@ -3,6 +3,6 @@
 @code {
     protected override void OnInitialized()
     {
-        NavigationManager.NavigateTo("/auth/login");
+        NavigationManager.NavigateTo("/authentication/login");
     }
 }
